--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.S3_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_KEY }}
   AWS_S3_ENDPOINT: ${{ secrets.S3_ENDPOINT }}
-  AWS_REGION: ${{ secrets.S3_REGION }}
+  AWS_REGION: ${{ vars.S3_REGION }}
 
 jobs:
   terraform:
