transmission of an id between 2 jobs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,7 @@ jobs:
       # Transmit the kubeconfig file to the job outputs
       - name: Kubeconfig
         id: kubeconfig
-        run: echo "KUBECONFIG=$(terraform output -raw kubeconfig)" >> $GITHUB_OUTPUT
+        run: echo "KUBECONFIG=$(terraform output -raw clusterid)" >> $GITHUB_OUTPUT
 
 
   configuration:
@@ -106,5 +106,5 @@ jobs:
         run: cat kubeconfig.yml
 
       # Display kubernetes currently running nodes
-      - name: display k8s nodes
-        run: kubectl get nodes --kubeconfig kubeconfig.yml
+#      - name: display k8s nodes
+#        run: kubectl get nodes --kubeconfig kubeconfig.yml
