and without ouput ?

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,10 +83,7 @@ jobs:
       - name: Kubeconfig
         id: kubeconfig
 #        run: echo "KUBECONFIG=$(terraform output -raw clusterid)" >> $GITHUB_ENV
-        run: |
-          foo=$(terraform output -raw clusterid)
-          echo "${foo}"
-          echo "config=${foo}" >> $GITHUB_OUTPUT
+        run: echo "config=$(terraform output -raw clusterid)"
 
 
   configuration:
