--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,8 +39,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: sandbox
 
-    outputs:
-      kubeconfig: ${{ steps.kubeconfig.outputs.config }}
+#    outputs:
+#      kubeconfig: ${{ steps.kubeconfig.outputs.config }}
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
@@ -79,12 +79,6 @@ jobs:
         # if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
 
-      # Transmit the kubeconfig file to the job outputs
-      - name: Kubeconfig
-        id: kubeconfig
-#        run: echo "KUBECONFIG=$(terraform output -raw clusterid)" >> $GITHUB_ENV
-        run: echo "config=$(terraform output -raw clusterid)"
-
 
   configuration:
     name: 'Configuration of Kubernetes cluster'
@@ -99,13 +93,13 @@ jobs:
 
     steps:
       # Generate kubeconfig file
-      - name: Regenerate kubeconfig file
-        run: echo ${{needs.provisioning.outputs.kubeconfig}} > kubeconfig.yml
+      - name: Generate kubeconfig file
+        run: terraform output -raw kubeconfig > kubeconfig.yml
 
       # Display generated kubeconfig file
       - name: Display kubeconfig file
         run: cat kubeconfig.yml
 
       # Display kubernetes currently running nodes
-#      - name: display k8s nodes
-#        run: kubectl get nodes --kubeconfig kubeconfig.yml
+      - name: display k8s nodes
+        run: kubectl get nodes --kubeconfig kubeconfig.yml
