output kubeconfig file from terraform

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,7 +102,7 @@ jobs:
 
       # Generate kubeconfig file
       - name: Generate kubeconfig file
-        run: terraform output kubeconfig > kubeconfig.yml
+        run: terraform output --raw kubeconfig > kubeconfig.yml
 
       # Display generated kubeconfig file
       - name: Display kubeconfig file
