change in gh runner to get a kubectl v1.25 corresponding to the version of the k8s cluster

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,11 +36,8 @@ env:
 jobs:
   provisioning:
     name: 'Provisioning with Terraform'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20221119.2
     environment: sandbox
-
-#    outputs:
-#      kubeconfig: ${{ steps.kubeconfig.outputs.config }}
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
