folder for kubeconfig

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,13 +101,13 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
+      # Create folder for kubeconfig file
+      - name: Create folder for kubeconfig file
+        run: mkdir ~/.kube/
+
       # Generate kubeconfig file
       - name: Generate kubeconfig file
         run: terraform output --raw kubeconfig >  ~/.kube/config
-
-      # Display generated kubeconfig file
-#      - name: Display kubeconfig file rights
-#        run: ls -al
 
       # Display kubernetes currently running nodes
       - name: display k8s nodes
