--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,14 +102,14 @@ jobs:
         run: terraform init
 
       # Generate kubeconfig output
-      - name: Generate kubeconfig file
+      - name: Generate kubeconfig output
         id: kubeconfig
         run: terraform output --raw kubeconfig
 
-      # Generate kubeconfig file
-      - name: Generate kubeconfig file
+      # Create kubeconfig file from previous output
+      - name: Create kubeconfig file from previous output
         run: |
-          echo ${{ steps.kubeconfig.outputs.stdout }} > kubeconfig.yml
+          echo "${{ steps.kubeconfig.outputs.stdout }}" > kubeconfig.yml
           cat -e kubeconfig.yml
 
       # Display kubernetes currently running nodes
