And without the terraform wrapper ?

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,6 +96,8 @@ jobs:
       # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_wrapper: false
 
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
@@ -104,11 +106,11 @@ jobs:
       # Generate kubeconfig output
       - name: Generate kubeconfig output
         id: kubeconfig
-        run: terraform output --raw kubeconfig
-
-      # Create kubeconfig file from previous output
-      - name: Create kubeconfig file from previous output
-        run: echo "${{ steps.kubeconfig.outputs.stdout }}" > kubeconfig.yml
+        run: terraform output --raw kubeconfig > kubeconfig.yml
+#
+#      # Create kubeconfig file from previous output
+#      - name: Create kubeconfig file from previous output
+#        run: echo "${{ steps.kubeconfig.outputs.stdout }}" > kubeconfig.yml
 
       # Display kubernetes currently running nodes
       - name: display k8s nodes
