--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: sandbox
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    # Use the Bash shell
     defaults:
       run:
         shell: bash
@@ -49,7 +49,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+      # Install the latest version of Terraform CLI
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
@@ -83,35 +83,28 @@ jobs:
     needs: provisioning
     environment: sandbox
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
         shell: bash
 
     steps:
-      # Checkout the repository to the GitHub Actions runner
       - name: Checkout
         uses: actions/checkout@v3
 
-      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+      # Install the latest version of Terraform CLI but without wrapper
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_wrapper: false
 
-      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         run: terraform init
 
-      # Generate kubeconfig output
-      - name: Generate kubeconfig output
+      # Generate kubeconfig file
+      - name: Generate kubeconfig file
         id: kubeconfig
         run: terraform output --raw kubeconfig > kubeconfig.yml
-#
-#      # Create kubeconfig file from previous output
-#      - name: Create kubeconfig file from previous output
-#        run: echo "${{ steps.kubeconfig.outputs.stdout }}" > kubeconfig.yml
 
-      # Display kubernetes currently running nodes
-      - name: display k8s nodes
+      # Display cluster info just for test purpose
+      - name: display cluster informations
         run: kubectl cluster-info --kubeconfig kubeconfig.yml
