gitignore file reorg

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Local .terraform directories
-**/.terraform/*
+.terraform
 
 # .tfstate files
 *.tfstate
@@ -11,8 +11,7 @@ crash.log
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
-#
-# example.tfvars
+*.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -30,9 +29,6 @@ override.tf.json
 
 # IDE settings
 .idea
-
-# tfvars file
-*.tfvars
 
 # local env file
 local.env.sh
