Test environment detection

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,35 +40,42 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: setenv
-        run: |
-          BRANCH=$(git branch --show-current)
-          WORKSPACE=$(echo $BRANCH | cut -f1 -d'-')
-          echo "on récupère le nom de l'environnement à partir de la nomenclature environnemnt-feature"
-          echo $WORKSPACE
-          echo "WORKSPACE=$WORKSPACE" >> $GITHUB_ENV
-          
-          case $WORKSPACE in
-          main)
-          echo "case production"
-          echo "::set-output name=my_env::production"
-          ;;
-          
-          develop)
-          echo "case develop"
-          echo "::set-output name=my_env::develop"
-          ;;
-          
-          *)
-          echo "case unknown"
-          echo "::set-output name=my_env::unknown"
-          exit 1
-          
-          esac
+        if: github.ref_name == "main"
+        run:  echo "::set-output name=my_env::production"
+      - id: setenv
+        if: github.ref_name == "develop"
+        run:  echo "::set-output name=my_env::develop"
+
+#        run: |
+#          BRANCH=${{ github.ref_name }}
+#          WORKSPACE=$(echo $BRANCH | cut -f1 -d'-')
+#          echo "on récupère le nom de l'environnement à partir de la nomenclature environnemnt-feature"
+#          echo $WORKSPACE
+#          echo "WORKSPACE=$WORKSPACE" >> $GITHUB_ENV
+#
+#          case $WORKSPACE in
+#          main)
+#          echo "case production"
+#          echo "::set-output name=my_env::production"
+#          ;;
+#
+#          develop)
+#          echo "case develop"
+#          echo "::set-output name=my_env::develop"
+#          ;;
+#
+#          *)
+#          echo "case unknown"
+#          echo "::set-output name=my_env::unknown"
+#          exit 1
+#
+#          esac
 
   provisioning:
     name: 'Provisioning with Terraform'
     runs-on: ubuntu-latest
     environment: sandbox
+    needs: set_environment
 
     # Use the Bash shell
     defaults:
@@ -76,6 +83,9 @@ jobs:
         shell: bash
 
     steps:
+      - name: Testing job environment
+        run: echo "${{ needs.set_environment.outputs.my_env }}"
+
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
         uses: actions/checkout@v3
