--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ name: 'Deployment'
 
 on:
   push:
-    branches: [ "main" ]
+#    branches: [ "main" ]
   pull_request:
 
 permissions:
@@ -16,10 +16,10 @@ permissions:
 
 env:
   # configure access to S3 where tfstates are stored
-  AWS_ACCESS_KEY_ID: ${{ secrets.S3_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_KEY }}
-  AWS_S3_ENDPOINT: ${{ vars.S3_ENDPOINT }}
-  AWS_REGION: ${{ vars.S3_REGION }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_S3_ENDPOINT: ${{ vars.AWS_S3_ENDPOINT }}
+  AWS_REGION: ${{ vars.AWS_REGION }}
   # configure access to OVH provider
   OVH_ENDPOINT: ${{ vars.OVH_ENDPOINT }}
   OVH_APPLICATION_KEY: ${{ secrets.OVH_APPLICATION_KEY }}
@@ -34,10 +34,38 @@ env:
   NODEPOOL_FLAVOR: ${{ vars.NODEPOOL_FLAVOR }}
 
 jobs:
+  set_environment:
+    name: 'Dynamic detection of environment'
+    outputs:
+      my_env: ${{ steps.setenv.outputs.my_env }}
+    runs-on: ubuntu-latest
+    steps:
+      - id: setenv
+        run: |
+          BRANCH=${{ github.ref_name }}
+          ENVIRONMENT=$(echo $BRANCH | cut -f1 -d'-')
+
+          case $ENVIRONMENT in
+          main)
+          echo "my_env=production" >> $GITHUB_OUTPUT
+          ;;
+
+          develop)
+          echo "my_env=develop" >> $GITHUB_OUTPUT
+          ;;
+
+          *)
+          echo "other case : environment=${ENVIRONMENT}"
+          echo "my_env=${ENVIRONMENT}" >> $GITHUB_OUTPUT
+
+          esac
+
   provisioning:
     name: 'Provisioning with Terraform'
     runs-on: ubuntu-latest
-    environment: sandbox
+    environment:
+      name: ${{ needs.set_environment.outputs.my_env }}
+    needs: set_environment
 
     # Use the Bash shell
     defaults:
@@ -45,6 +73,9 @@ jobs:
         shell: bash
 
     steps:
+      - name: Environment used
+        run: echo "${{ needs.set_environment.outputs.my_env }}"
+
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
         uses: actions/checkout@v3
@@ -55,7 +86,7 @@ jobs:
 
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -backend-config="bucket=terraform-states-hp-${{ needs.set_environment.outputs.my_env }}"
 
       # Checks that all Terraform configuration files adhere to a canonical format
       - name: Terraform Format
@@ -80,14 +111,18 @@ jobs:
   configuration:
     name: 'Configuration of Kubernetes cluster'
     runs-on: ubuntu-latest
-    needs: provisioning
-    environment: sandbox
+    needs: [provisioning, set_environment]
+    environment:
+      name: ${{ needs.set_environment.outputs.my_env }}
 
     defaults:
       run:
         shell: bash
 
     steps:
+      - name: Environment used
+        run: echo "${{ needs.set_environment.outputs.my_env }}"
+
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -98,7 +133,7 @@ jobs:
           terraform_wrapper: false
 
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -backend-config="bucket=terraform-states-hp-${{ needs.set_environment.outputs.my_env }}"
 
       # Generate kubeconfig file
       - name: Generate kubeconfig file
