--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -1,12 +1,5 @@
 ---
-- name: Create namespace dedicated to matrix
-  kubernetes.core.k8s:
-    name: matrix
-    api_version: v1
-    kind: Namespace
-    state: present
-
-- name: Add ananace-charts helm repo
+- name: Add ananace-charts helm repository
   kubernetes.core.helm_repository:
     name: ananace-charts
     repo_url: "https://ananace.gitlab.io/charts"
@@ -16,7 +9,12 @@
     name: matrix-synapse
     chart_ref: ananace-charts/matrix-synapse
     release_namespace: matrix
+    create_namespace: true
     release_values:
       serverName: eimis.incubateur.net
+#      config:
+#        publicBaseurl: http://141.95.163.184:8008
+      ingress:
+        className: nginx
       wellknown.enabled: true
     update_repo_cache: yes
