--- a/ansible/roles/ingress-controller/tasks/main.yml
+++ b/ansible/roles/ingress-controller/tasks/main.yml
@@ -20,9 +20,25 @@
     namespace: ingress-nginx
   register: ingress_controller_service
   until: ingress_controller_service.resources[0].status.loadBalancer.ingress[0].ip is defined
-  retries: 5
+  retries: 10
   delay: 10
 
 - name: "DEBUG ingress-controller external IP"
   debug:
    msg: "{{ ingress_controller_service.resources[0].status.loadBalancer.ingress[0].ip }}"
+
+- name: "DEBUG environment"
+  debug:
+    msg: "{{ env }}"
+
+#- name: Modify DNS zone to point to the ingress-controller external IP
+#  synthesio.ovh.domain:
+#    endpoint: "{{ ovh.endpoint }}"
+#    application_key: "{{ ovh.application_key }}"
+#    application_secret: "{{ ovh.application_secret }}"
+#    consumer_key: "{{ ovh.consumer_key }}"
+#    domain: "matrix.{{ domain_name }}"
+#    value: "{{ ingress_controller_service.resources[0].status.loadBalancer.ingress[0].ip }}"
+#    record_type: "A"
+#    name: "synapse"
+#    record_ttl: 0
