--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -2,3 +2,6 @@
 collections:
   - name: kubernetes.core
     version: 2.3.2
+  - name: https://github.com/synthesio/infra-ovh-ansible-module
+    type: git
+    version: 5.6.0
