--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ env:
   CLUSTER_VERSION: ${{ vars.CLUSTER_VERSION }}
   NODEPOOL_NAME: ${{ vars.NODEPOOL_NAME }}
   NODEPOOL_FLAVOR: ${{ vars.NODEPOOL_FLAVOR }}
+  DOMAIN_NAME: ${{ vars.DOMAIN_NAME }}
 
 jobs:
   set_environment:
