undo debug on zone DNS configuration

--- a/ansible/roles/ingress-controller/tasks/main.yml
+++ b/ansible/roles/ingress-controller/tasks/main.yml
@@ -27,9 +27,9 @@
   debug:
    msg: "{{ ingress_controller_service.resources[0].status.loadBalancer.ingress[0].ip }}"
 
-- name: "DEBUG domain name"
-  debug:
-    msg: "{{ domain_name }}"
+#- name: "DEBUG domain name"
+#  debug:
+#    msg: "{{ domain_name }}"
 
 - name: Modify DNS zone to point to the ingress-controller external IP
   synthesio.ovh.domain:
